[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-tools"
version = "0.1.0"
description = "Shared multi-domain automation toolkit for media and file management"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Ashwin Nair", email = "example@email.com" }
]

license = { text = "MIT" }  # SPDX identifiers are preferred over bare strings

keywords = ["media", "automation", "file", "cli", "mkv", "rename", "scan"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

# Core dependencies (adjust as your scripts evolve)
dependencies = [
  "argcomplete>=3.0",
  "rich>=13.0",
  "tqdm>=4.0",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "send2trash>=1.8",
  "typing-extensions>=4.0; python_version<'3.11'",
]

# URLs for PyPI or docs visibility
[project.urls]
Homepage = "https://github.com/abu-menang/titan-tools"
Source = "https://github.com/abu-menang/titan-tools"
Issues = "https://github.com/abu-menang/titan-tools/issues"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "flake8>=7.0",
  "mypy>=1.5",
  "pytest>=8.0",
  "build>=1.2",
  "ruff>=0.5",  # optional but powerful linter
]

# CLI entry points
# CLI entry points
[project.scripts]
titan-config = "common.shared.loader:cli_main"
scan-tracks = "apps.cli:cli_vid_mkv_scan"
vid-mkv-clean = "apps.cli:cli_vid_mkv_clean"
vid-mkv-extract-subs = "apps.cli:cli_vid_mkv_extract_subs"
vid-rename = "apps.cli:cli_vid_rename"
file-scan = "file.scanner:cli"
file-rename = "file.renamer:cli"
vid-hevc-convert = "apps.cli:cli_vid_hevc_convert"
vid-srt-clean = "apps.cli:cli_vid_srt_clean"
vid-cleaner = "apps.cli:cli_vid_cleaner"
vid-conv-cleaner = "apps.cli:cli_vid_conv_cleaner"
vid-conv-clean = "apps.cli:cli_vid_conv_cleaner"
clean-01 = "apps.cli:cli_clean_01"
clean-02 = "apps.cli:cli_clean_02"
clean-03 = "apps.cli:cli_clean_03"
clean-04 = "apps.cli:cli_clean_04"
clean-05 = "apps.cli:cli_clean_05"
clean-06 = "apps.cli:cli_clean_06"
scan-hevc = "apps.cli:cli_vid_scan_hevc"
vid-tagger = "apps.cli:cli_vid_tagger"
vid-tag = "apps.cli:cli_vid_tagger"

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "video*", "apps*", "file*", "helpers*"]
exclude = ["tests", "docs", "media", "dist"]

[tool.setuptools]
include-package-data = true

# Formatting / QA tools
[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
